--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject",
     "lint": "eslint \"src/**/*.{ts,js,tsx}\" && prettier --check \"src/**/*.{ts,js,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,js,tsx}\" --fix && prettier --write \"src/**/*.{ts,js,tsx,scss}\""
   },
@@ -27,13 +27,15 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
+    "craco": "^0.0.3",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^28.8.1",
     "eslint-plugin-react-refresh": "^0.4.11",
     "eslint-plugin-unused-imports": "^4.1.3",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "react-app-alias": "^2.2.2"
   },
   "browserslist": {
     "production": [
