--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "craco test",
     "eject": "craco eject",
     "lint": "eslint \"src/**/*.{ts,js,tsx}\" && prettier --check \"src/**/*.{ts,js,tsx}\"",
-    "lint:fix": "eslint \"src/**/*.{ts,js,tsx}\" --fix && prettier --write \"src/**/*.{ts,js,tsx,scss}\""
+    "lint:fix": "eslint \"src/**/*.{ts,js,tsx}\" --fix && prettier --write \"src/**/*.{ts,js,tsx,scss}\"",
+    "lint:style": "stylelint 'src/**/*.{css,scss,sass}'",
+    "lint:style:fix": "stylelint --fix 'src/**/*.{css,scss,sass}'"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -35,7 +37,12 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "eslint-plugin-unused-imports": "^4.1.3",
     "prettier": "^3.3.3",
-    "react-app-alias": "^2.2.2"
+    "react-app-alias": "^2.2.2",
+    "stylelint": "^16.9.0",
+    "stylelint-config-prettier-scss": "^1.0.0",
+    "stylelint-config-recess-order": "^5.1.0",
+    "stylelint-config-recommended-scss": "^14.1.0",
+    "stylelint-config-standard-scss": "^13.1.0"
   },
   "browserslist": {
     "production": [
